--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Stickerz</h1>
-    <img src="img/привет!.gif" alt="привет!.gif"
+    <img src="img/cat.gif" alt="cat.gif"
     <a href="https://24tv.ua/">24tv.ua</a>
 </body>
 
