--- a/index.html
+++ b/index.html
@@ -1,16 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stickerz</title>
-</head>
-
-<body>
-    <h1>Stickerz</h1>
-    <img src="img/cat.gif" alt="cat.gif">
-    <a href="https://24tv.ua/">24tv.ua</a>
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Stickerz!</title>
+        <link rel="icon" href="img/baby-yoda.svg">
+    </head>
+    <body>
+        <header id="home">
+             <nav>
+                <div class="logo">
+                    Stickerz
+                </div>
+                <div class="menu">
+                    <a href="#home">Home</a>
+                    <a href="#products">Products</a>
+                    <a href="#contacts">Contacts</a>
+                    <a href="cart.html">Cart</a>
+                </div> 
+             </nav> 
+             <section>
+                 <h1>Welcome to <br>Stickerz!</h1>
+                 <p class="subheading">Best sticker shop in the World!</p>
+                 <hr>
+                 <p class="discount-notice">Buy with discount today</p>
+                 <a href="#products" class="button">Buy now</a>
+             </section>  
+        </header>
+        <main>
+            <h2 id="products">Products</h2>
+            <div class="product-list">
+                <article class="product">
+                    <img src="img/baby-yoda.svg" alt="Baby Yoda">
+                    <h3>Baby Yoda</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem illo voluptatem aliquam provident odio ducimus error soluta tempora vero sint? Ipsa ipsum veniam, minus unde nihil incidunt cum corrupti. Ad.</p>
+                    <div class="buttons">
+                        <button>Info</button>
+                        <button>Buy</button>
+                    </div>
+                </article>
+                <article class="product">
+                    <img src="img/banana.svg" alt="Banana">
+                    <h3>Banana</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem illo voluptatem aliquam provident odio ducimus error soluta tempora vero sint? Ipsa ipsum veniam, minus unde nihil incidunt cum corrupti. Ad.</p>
+                    <div class="buttons">
+                        <button>Info</button>
+                        <button>Buy</button>
+                    </div>
+                </article>
+                <article class="product">
+                    <img src="img/girl.svg" alt="Girl">
+                    <h3>Girl</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem illo voluptatem aliquam provident odio ducimus error soluta tempora vero sint? Ipsa ipsum veniam, minus unde nihil incidunt cum corrupti. Ad.</p>
+                    <div class="buttons">
+                        <button>Info</button>
+                        <button>Buy</button>
+                    </div>
+                </article>
+                <article class="product">
+                    <img src="img/viking.svg" alt="Viking">
+                    <h3>Viking</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem illo voluptatem aliquam provident odio ducimus error soluta tempora vero sint? Ipsa ipsum veniam, minus unde nihil incidunt cum corrupti. Ad.</p>
+                    <div class="buttons">
+                        <button>Info</button>
+                        <button>Buy</button>
+                    </div>
+                </article>
+            </div>
+        </main>
+        <footer>
+            <h2>Contacts</h2>
+            <form action="????" method="POST">
+                <label>
+                    Your name:
+                    <input type="text" name="user-name" placeholder="Your name" required>
+                </label>
+                <br>
+                <label>
+                    Your email:
+                    <input type="email" name="user-email" placeholder="Your email" required>
+                </label>
+                <br>
+                <input type="submit">                
+            </form>
+        </footer>
+    </body>
 </html>
